--- a/Predictive-analysis-in-regression.Rmd
+++ b/Predictive-analysis-in-regression.Rmd
@@ -133,38 +133,35 @@ Linear regression makes several assumptions about the data, such as:
 ## Plotting the fitted model
 plot(simple_model)
 
-## Create all four plots at once
-
-
 ```
 
 ## Task Seven: Perform model fit assessment
 In this task, you will learn how to assess how well the model fit and significance of the predictor variable
 ```{r}
 ## Assess the summary of the fitted model
-
+summary(simple_model)
 
 ## Calculate the confidence interval for the coefficients
-
+confint(simple_model)
 ```
 
 ## Task Nine: Build a simple regression model with transformation
 In this task, you will build a simple linear regression model using a square root or log transformation on the independent variable 
 ```{r}
 ## Build a log transformed regression model
-
+model_transformed <- lm(log10(volume) ~ sales, data=txhousing)
 
 ## Return the summary of the model
-
+summary(model_transformed)
 
 ## Return the first diagnostic plot for the model
-
+plot(model_transformed, 1)
 
 ## Return the second diagnostic plot for the model
-
+plot(model_transformed, 2)
 
 ## Return the third diagnostic plot for the model
-
+plot(model_transformed, 3)
 
 ```
 
@@ -172,13 +169,15 @@ In this task, you will build a simple linear regression model using a square roo
 In this task, you will learn how to check for metrics from the fitted model and make predictions given new values of the independent variable
 ```{r}
 ## Find the fitted values of the simple regression model
-
+fitted_values <- predict.lm(simple_model)
+head(fitted_values, 3)
 
 ## Return the model metrics
-
+model_metrics <- augment(simple_model)
+model_metrics
 
 ## Predict new values using the model
-
+predict(simple_model, newdata= data.frame(sales = c(210, 27, 140)))
 
 ```
 
@@ -186,7 +185,7 @@ In this task, you will learn how to check for metrics from the fitted model and 
 In this task, you will build a multiple regression model with one dependent variable and three independent variables and interpret the results
 ```{r}
 ## Build the multiple regression model with volume as the y variable and sales, median and age on the x variables
-
+multiple_reg <- lm(volume ~ sales + median, data=txhousing)
 
 ## This prints the result of the model
 multiple_reg
@@ -203,18 +202,18 @@ autoplot(multiple_reg)
 In this task, you will build a model from scratch to predict house prices using variables in a data set
 ```{r}
 ## Create a broad overview of the data set
-
+skim(house_sales)
 
 ## Drop the missing values in the LotFrontage variable
-
+house_sales <- house_sales %>% drop_na(LotFrontage)
 
 ## Build the multiple regression model 
-
+house_reg <- lm(SalePrice  ~ .,data=house_sales)
 
 ## Check the summary of the multiple regression model
-
+summary(house_reg)
 
 ## Perform diagnostic plots of the fitted multiple regression model
-
+autoplot(house_reg)
 
 ```
